--- a/index.html
+++ b/index.html
@@ -1,1 +1,121 @@
-sdasdasd
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>Synergizing Education, Economic Growth, and Environmental Management: A Strategic Framework for Cambodia’s Sustainable Future</title>
+    <link href="./assets/style.css" rel="stylesheet">
+    <script type="text/javascript" src="./assets/jquery.mlens-1.0.min.js"></script> 
+    <script type="text/javascript" src="./assets/jquery.js"></script>
+</head>
+
+<body>
+<div class="content">
+  <h1><strong>Synergizing Education, Economic Growth, and Environmental Management: A Strategic for Cambodia’s Sustainable Future</strong></h1>
+  <p id="authors"><span><a href=""></a></span><a href="https://www.researchgate.net/profile/Panhapin-Theang">Panhapin Theang</a>
+    <br>
+  <span style="font-size: 24px">One to Many Cambodia, Cambodia
+  </span></p>
+  <br>
+  <h3>Research and Progress</h3>
+ Paper 1: The 20th February Event: Strategies for Education and Economic Development in Cambodia<a href=""> </a></span><a href="https://doi.org/10.5281/zenodo.11323621">[Link]</a> </br>
+ Paper 2: Renewable Energy in Cambodia: Challenges, Opportunities and Relations Recommendations<a href=""> </a></span><a href="">[Link]</a></br>
+ Paper 3: Combining Environmental Management and Community Awareness in Cambodia<a href=""> </a></span><a href="">[Under review]</a>
+   
+</div>
+<div class="content">
+  <h2 style="text-align:center;">Project Goals</h2>
+  <p>This project explores the interconnectedness of education, economic growth, and environmental management as key pillars for promoting sustainable development in Cambodia. While rapid economic expansion has fueled improvements in living standards, it has also led to environmental degradation and socio-economic disparities. Addressing these challenges requires a holistic strategy that integrates educational reform, sustainable economic policies, and robust environmental governance. By enhancing environmental education, empowering local communities, and fostering a green economy, this approach seeks to cultivate an informed populace that actively participates in sustainable practices. Through a comprehensive review of current policies and developmental strategies, we propose a multi-sectoral framework that aligns national educational initiatives with environmental and economic goals. This paper argues that investing in education and adopting sustainable practices are critical to balancing economic growth with ecological conservation, ensuring a resilient and sustainable future for Cambodia.
+
+.</p>
+</div>
+<div class="content">
+  <h2>Paper 1: The 20th February Event: Strategies for Education and Economic Development in Cambodia</h2>
+   <div class="section">
+        <h2>1. Context and Background of the 20th February Event</h2>
+        <p>The paper probably begins by introducing the historical and political significance of the 20th February Event and its impact on Cambodia's socio-economic landscape.</p>
+        <p>It may provide a timeline of events, outlining the economic and social consequences that followed.</p>
+    </div>
+
+    <div class="section">
+        <h2>2. Key Strategies for Socio-Economic Development</h2>
+        <ul>
+            <li><strong>Economic Reforms:</strong> The document likely discusses various reforms aimed at revitalizing the Cambodian economy, including policies targeting industry, agriculture, and infrastructure.</li>
+            <li><strong>Social Welfare Initiatives:</strong> The paper may highlight programs implemented to support vulnerable communities affected by the event.</li>
+            <li><strong>Environmental Policies:</strong> Given Cambodia’s unique ecological context, the paper might also touch on sustainable development initiatives and environmental governance.</li>
+        </ul>
+    </div>
+
+    <div class="section">
+        <h2>3. Policy Implementation and Governance</h2>
+        <p>Analyzing how the Cambodian government responded to the aftermath of the event with a focus on governance, public administration reforms, and strategic planning.</p>
+        <p>Exploring international cooperation and partnerships that played a role in shaping post-event recovery.</p>
+    </div>
+
+    <div class="section">
+        <h2>4. Challenges and Opportunities</h2>
+        <p>The paper likely outlines major challenges faced during the implementation of these strategies, such as political instability, economic dependencies, and social inequalities.</p>
+        <p>It may also highlight emerging opportunities for development, such as leveraging technology or investing in human capital.</p>
+    </div>
+
+    <div class="section">
+        <h2>5. Impact and Future Directions</h2>
+        <p>Assessing the long-term impact of these strategies on Cambodia’s socio-economic stability and growth.</p>
+        <p>Recommendations for future policies to ensure sustainable and inclusive development.</p>
+    </div>
+  <br>
+</div>
+<div class="content">
+ <h2>Paper 2: Renewable Energy in Cambodia: Challenges, Opportunities and Relations Recommendations</h2>
+
+<div class="section">
+    <h2>Introduction</h2>
+    <p>The emerging challenge of Cambodia lies critically in the uneven expanse of electricity consumption versus the income of the people in the local community as the country is known to have the highest price of electricity in ASEAN. Given the potential of being the chairman of ASEAN in 2022, another point of discussion arises upon the progress of renewable energy development in the country, which is significant to boost income growth and bring about modernization 4.0.</p>
+</div>
+
+<div class="section">
+    <h2>Challenges in Renewable Energy Development</h2>
+    <p>The rising challenges lie critically on the feasibility of the progress toward renewable energy development despite the lack of techniques and resources. The purpose of this paper aims at investigating the potential area for developing renewable energy and approaches toward its utilization through the study of:</p>
+    <ul>
+        <li>Existing types of energy in specific locations and the given potential.</li>
+        <li>Current challenges and future concerns.</li>
+        <li>Possibility of international energy cooperation between countries.</li>
+    </ul>
+</div>
+
+<div class="section">
+    <h2>Opportunities for Renewable Energy Development</h2>
+    <p>Even though many global powers are leading in terms of renewable energy development, cooperation with Cambodia on that particular area is feasible only with a similar context of policies, technical suitability, and political willingness to cooperate and shared partnerships.</p>
+    <p>Therefore, critical analysis of the current challenges and existing potential are essential in the analysis of international cooperation for developing countries as well as Cambodia.</p>
+</div>
+
+<div class="section">
+    <h2>Conclusion</h2>
+    <p>The conclusion of the paper would further elaborate on the possibility of cooperation with relevant countries that could efficiently foster growth in the respective areas based on suitability and utilization of resources and partnerships.</p>
+</div>
+
+</div>
+
+
+
+
+<div class="content">
+  <h2>Acknowledgments</h2>
+  <p>One to Many Cambodia Research Project</p>
+</div>
+<div class="content">
+  <h2>BibTex</h2>
+  <code> @misc{theang_2024_11323621,
+  author       = {Theang, Panhapin and
+                  NIMOL, THUON},
+  title        = {{The 20th February Event: Strategies for Education 
+                   and Economic Development in Cambodia}},
+  month        = may,
+  year         = 2024,
+  publisher    = {Zenodo},
+  doi          = {10.5281/zenodo.11323621},
+  url          = {https://doi.org/10.5281/zenodo.11323621}
+} </code> 
+</div>
+
+</body>
+</html>
